Various typos (fixes #2882 Patch for various spelling errors (sebastic))
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67703 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/general/g.proj/g.proj.html
+++ b/general/g.proj/g.proj.html
@@ -137,7 +137,7 @@ cat proj4.description | g.proj -w proj4=-
 </pre></div>
 
 <p>Create a new location with the co-ordinate system referred to by EPSG code
-4326 (Latitude-Longitude/WGS84), without explicitly specifiying datum
+4326 (Latitude-Longitude/WGS84), without explicitly specifying datum
 transformation parameters:<br>
 
 <div class="code"><pre>
