--- a/imagery/i.landsat.acca/i.landsat.acca.html
+++ b/imagery/i.landsat.acca/i.landsat.acca.html
@@ -23,7 +23,7 @@ useful for Landsat-4/5 TM.
 Run the standard ACCA algorithm with filling of small cloud holes
 (the <b>-f</b> flag): With per-band reflectance raster maps
 named <tt>226_62.toar.1, 226_62.toar.2, </tt> [...] and LANDSAT-7
-thermal band <tt>226_62.toar.61</tt>, outputing to a new raster map
+thermal band <tt>226_62.toar.61</tt>, outputting to a new raster map
 named <tt>226_62.acca</tt>:
 
 <div class="code"><pre>
