--- a/raster/r.series/r.series.html
+++ b/raster/r.series/r.series.html
@@ -9,7 +9,7 @@ Following methods are available:
  <li>average: average value
  <li>count: count of non-NULL cells
  <li>median: median value
- <li>mode: most frequently occuring value
+ <li>mode: most frequently occurring value
  <li>minimum: lowest value
  <li>maximum: highest value
  <li>range: range of values (max - min)
