--- a/raster3d/r3.in.ascii/r3.in.ascii.html
+++ b/raster3d/r3.in.ascii/r3.in.ascii.html
@@ -46,7 +46,7 @@ The version and order option have been introduced in GRASS 7 in June 2011.
 The version option is self explaining. The order option specifies the row
 and depth order of the data in the input file.
 The supported row/depth ordering is documented in the <em>r3.out.ascii</em>
-manual page. The order of the data in the input file does not specifiy the
+manual page. The order of the data in the input file does not specify the
 data order in the generated output 3D raster map which is in any case 
 <em>north -> south, west -> east, bottom -> top</em> order.
 So dependent on the order information the data is automatically imported
