--- a/vector/v.rectify/v.rectify.html
+++ b/vector/v.rectify/v.rectify.html
@@ -9,7 +9,7 @@ system than before it was rectified).
 <p>
 The <em>-o</em> flag enforces orthogonal rotation (currently for 3D only) 
 where the axes remain orthogonal to each other, e.g. a cube with right 
-angles remains a cube with right angles after tranformation. This is not 
+angles remains a cube with right angles after transformation. This is not 
 guaranteed even with affine (1<sup>st</sup> order) 3D transformation.
 
 <p>
