--- a/raster/r.proj/r.proj.html
+++ b/raster/r.proj/r.proj.html
@@ -316,6 +316,6 @@ The 'gdalwarp' and 'gdal_translate' utilities are available from the
 Martin Schroeder, University of Heidelberg, Germany<br>
 Man page text from S.J.D. Cox, AGCRC, CSIRO Exploration &amp; Mining, Nedlands, WA<br>
 Updated by <a href="mailto:morten@untamo.net">Morten Hulden</a><br>
-Datum tranformation support and cleanup by Paul Kelly
+Datum transformation support and cleanup by Paul Kelly
 
 <p><i>Last changed: $Date$</i>
