r3.in.lidar: basic implementation [news]
Experimental, major limitations described in manual.


git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67705 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster3d/raster3dintro.html
+++ b/raster3d/raster3dintro.html
@@ -85,6 +85,13 @@ a 3D raster can be composed of several 2D raster maps.
 2D rasters are considered as slices in this case and
 merged into one 3D raster map (<a href="r.to.rast3.html">r.to.rast3</a>).
 
+<p>
+Import of 3D points and their statistics can be done using
+<a href="r3.in.lidar.html">r3.in.lidar</a> for LiDAR data and
+<a href="r3.in.xyz.html">r3.in.xyz</a> for CSV and other ASCII text
+formats.
+
+
 <h3>3D region settings and 3D MASK</h3>
 
 GRASS GIS 3D raster map processing is always performed in the current 3D region
