v.build.polylines: added cats=same option
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67753 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/vector/v.build.polylines/v.build.polylines.html
+++ b/vector/v.build.polylines/v.build.polylines.html
@@ -49,6 +49,9 @@ a new polyline, i.e. lines and boundaries are kept separate.
   different category numbers then <em>v.build.polylines</em> will
   set the multiple category numbers to a polyline.  Also all linked
   attributes tables are copied to the output vector map.</li>
+  <li><b>cats=same</b> - Assigned lines to a polyline have
+  same category numbers in all layers. Linked
+  attributes tables are copied to the output vector map.</li>
 </ul>
 
 <em>v.build.polylines</em> correctly handles <b>input</b> vector maps
