--- a/vector/v.proj/v.proj.html
+++ b/vector/v.proj/v.proj.html
@@ -22,6 +22,10 @@ If <b>dbase</b> is not specified it is assumed to be the current
 database. The user only has to specify <b>dbase</b> if the source
 location is stored in another separate GRASS database.
 
+<br>
+If <b>smax</b> is set to <b>0</b> the automated vertex densification is
+disabled (not recommended).
+
 <p>
 <em>v.proj</em> supports general datum transformations, making use of the
 <em>PROJ.4</em> co-ordinate system translation library.
@@ -33,12 +37,12 @@ at 180E/W. In this case wrapping of east coordinates to -180,180 needs
 to be disabled with the <b>-w</b> flag.
 
 <p>
-In order to preserve spatial detail, it is recommended to densify linear 
-features with <em><a href="v.split.html">v.split</a></em> before 
-reprojecting. Depending on the source and target CRS 
-(Coordinate Reference System), geometries can be substantially 
-deformed (straight lines become curves, squares become trapezoids, etc). 
-In these cases densification of linear features can help to avoid 
+In order to preserve spatial detail, <em>v.proj</em> performs automated
+vertex densification (as an alternative, <em><a href="v.split.html">v.split</a></em>
+could be used before reprojecting. Without vertex densification, depending on
+the source and target CRS (Coordinate Reference System), geometries can be
+substantially deformed (straight lines become curves, squares become
+trapezoids, etc). The densification of linear features can help to avoid 
 topological errors.
 
 <h2>EXAMPLES</h2>
