g.gui.gmodeler: manual cosmetics (author -> authors)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67833 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/gui/wxpython/gmodeler/g.gui.gmodeler.html
+++ b/gui/wxpython/gmodeler/g.gui.gmodeler.html
@@ -270,7 +270,7 @@ the <a href="http://grasswiki.osgeo.org/wiki/WxGUI_Graphical_Modeler">wiki</a> p
 (especially various <a href="http://grasswiki.osgeo.org/wiki/WxGUI_Graphical_Modeler#Video_tutorials">video
 tutorials</a>).
 
-<h2>AUTHOR</h2>
+<h2>AUTHORS</h2>
 
 Martin Landa, OSGeoREL, Czech Technical University in Prague, Czech Republic<br>
 Various manual improvements by Ludmila Furkevicova, Slovak University of Technology in Bratislava, Slovak Republic
