wxGUI/lmgr: fix documentation enteries for tabs missed in https://trac.osgeo.org/grass/changeset/67852
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67886 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/general/g.findfile/g.findfile.html
+++ b/general/g.findfile/g.findfile.html
@@ -63,7 +63,7 @@ fi
 See <em><a href="http://grass.osgeo.org/grass71/manuals/libpython/">Python
 Scripting Library</a></em> for more info.
 <p>
-Note: The Python shell in the <em>wxGUI</em> can be used for entering the
+Note: The Python tab in the <em>wxGUI</em> can be used for entering the
 following code:
 <p>
 <div class="code"><pre>
