--- a/raster/r.sun/r.sun.html
+++ b/raster/r.sun/r.sun.html
@@ -292,7 +292,7 @@ d.rast.leg b172
 d.rast.leg it172
 </pre></div>
 
-We can compute the day of year from a specific date in Python shell:
+We can compute the day of year from a specific date in Python:
 <div class="code"><pre>
 >>> import datetime
 >>> datetime.datetime(2014, 6, 21).timetuple().tm_yday
