--- a/scripts/d.out.file/d.out.file.html
+++ b/scripts/d.out.file/d.out.file.html
@@ -3,7 +3,7 @@
 <em>d.out.file</em> saves the content of the currently selected
 monitor into graphic file. The active monitor can be selected
 with <em>d.mon</em>. <em>d.out.file</em> can be run from GUI
-command console, too.
+Console tab, too.
 
 <h2>SEE ALSO</h2>
  
