--- a/scripts/d.to.rast/d.to.rast.html
+++ b/scripts/d.to.rast/d.to.rast.html
@@ -3,7 +3,7 @@
 <em>d.to.rast</em> saves the content of the currently selected
 monitor into a raster map. The active monitor can be selected
 with <em>d.mon</em>. <em>d.to.rast</em> can be run from GUI
-command console, too. This module is not sensitive to computational region settings.
+Console tab, too. This module is not sensitive to computational region settings.
 
 <h2>EXAMPLE</h2>
 We combine different raster and vector map layers to create a composite layer
