--- a/vector/v.info/v.info.html
+++ b/vector/v.info/v.info.html
@@ -131,7 +131,7 @@ bottom=0.000000
 See <em><a href="http://grass.osgeo.org/grass71/manuals/libpython/">Python
 Scripting Library</a></em> for more info.
 <p>
-Note: The Python shell in the <em>wxGUI</em> can be used for entering the
+Note: The Python tab in the <em>wxGUI</em> can be used for entering the
 following code:
 <p>
 <div class="code"><pre>
