--- a/lib/init/variables.html
+++ b/lib/init/variables.html
@@ -107,6 +107,14 @@ PERMANENT
   <dd>defines the name (path) of a shell script to be processed as
   batch job.</dd>
 
+  <dt>GRASS_COMPRESSOR</dt>
+  <dd>[libraster]<br>
+    the compression method for new raster maps can be set with the
+    environment variable GRASS_COMPRESSOR. Supported methods are RLE, 
+    ZLIB, LZ4, and BZIP2 if GRASS has been compiled with BZIP2 support. 
+    The default is ZLIB which can be changed with e.g. 
+    <tt>GRASS_COMPRESSOR=LZ4</tt></dd>
+
   <dt>GRASS_DB_ENCODING</dt>
   <dd>[various modules, wxGUI]<br>
     encoding for vector attribute data (utf-8, ascii, iso8859-1, koi8-r)</dd>
