REQUIREMENTS.html: mention python-matplotlib
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67910 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/REQUIREMENTS.html
+++ b/REQUIREMENTS.html
@@ -160,6 +160,10 @@ Ctypes can be added as a third-party module in Python 2.3 and 2.4
 a newer version is "python-pillow"
 </li>
 
+<li><b>Python matplotlib &gt; 1.2</b> ("python-matplotlib", needed for the several wxGUI tools)<br>
+<a href="http://matplotlib.org/">http://matplotlib.org/</a>
+</li>
+
 <li><b>FFMPEG or alternative</b> (for wxGUI Animation tool - g.gui.module),
     specifically ffmpeg tool<br>
 <a href="http://ffmpeg.org">http://ffmpeg.org</a>
